Fixed jumping bug when no folders

--- a/src/content.css
+++ b/src/content.css
@@ -6,3 +6,6 @@ td.icon > svg.octicon-file, .rgh-edit-files-faster {
   display: none;
 }
 
+table.files td.icon {
+  width: 28px!important;
+}
